fix card heights and fix events listing grid to flex wrap (#66)

--- a/app/stylesheets/templates/_listing.scss
+++ b/app/stylesheets/templates/_listing.scss
@@ -10,6 +10,7 @@
   }
 
   &__link {
+    display: block;
     height: 100%;
     text-decoration: none;
     width: 100%;
@@ -24,7 +25,7 @@
   &__media {
     background-position: center center;
     background-size: cover;
-    height: 50%;
+    height: 230px
   }
 
   &__info {
@@ -32,7 +33,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 50%;
     padding: 20px;
   }
 
